--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 <p> drag into bookmarks bar or just click the links here </p>
 <p> if it throws an error that says the network response wasn't ok go 
-<a href="http://cors-anywhere.herokuapp.com/corsdemo>here</a> and request access to the demo server
+<a href="http://cors-anywhere.herokuapp.com/corsdemo">here</a> and request access to the demo server
 
 
